:bug: Fixing overflow allowed
Fixing overflow allowed #1

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -8,7 +8,6 @@ $light : 'CooperHewittLight';
   /* GENERAL */
   body {
     background: #F1F1F1;
-    overflow: hidden;
   }
 
   .header {
